電卓プロトタイプ220319ver2

--- a/電卓220319.rc
+++ b/電卓220319.rc
@@ -56,7 +56,7 @@ CAPTION "ìdëÏ220319"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "èIóπ",IDOK,131,197,50,14
-    EDITTEXT        IDC_EDIT1,68,27,113,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT1,68,27,113,14,ES_AUTOHSCROLL,WS_EX_CLIENTEDGE | WS_EX_RIGHT
     PUSHBUTTON      "1",IDC_BUTTON1,92,130,16,14
     PUSHBUTTON      "2",IDC_BUTTON2,117,130,16,14
     PUSHBUTTON      "3",IDC_BUTTON3,141,130,16,14
